--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
     "concurrently": "^7.6.0",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
+    "pg": "^8.9.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "@types/pg": "^8.6.6"
   },
   "scripts": {
     "server": "cd server && nodemon server.ts",
